--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">WorkClass</string>
+    <string name="app_name">WorkClassRen</string>
+    <string name="Example_Text">Hello World from Strings.xml</string>
+    <string name="text_cine">The Matrix (1999), dirigida por las hermanas Wachowski, es una película de ciencia ficción que se ha convertido en un hito dentro del cine moderno.</string>
 </resources>
